# MLOps

./: .coverage  .gitignore  ARCHITECTURE_REVIEW.md  PRD.md  README.md  TDD.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: COMPOUND_AI.md  SELF_HOSTING.md  index.md  security.md
docs/concepts/: agents.md  architecture.md  chat_models.md  gateway.md  graphs.md  index.md  memory_and_learning.md  messages.md  security.md  serving_engines.md  tools.md
docs/get_started/: installation.md  quickstart.md
docs/how_to/: auth_rate_limiting.md  custom_chat_model.md  database_migrations.md  deploy_docker_compose.md  evaluate_adapters.md  few_shot_examples.md  graphs_and_edges.md  guardrails.md  index.md  lora_hot_swap.md  observability.md  prompt_templates.md  sandbox_code_execution.md  serve_vllm_sglang.md  structured_output.md  tool_calling.md
docs/integrations/: anthropic.md  index.md  openai.md  self_hosted.md
docs/reference/: engine.md  evals.md  gateway.md  graph.md  guardrails.md  index.md  memory.md  models.md  prompts.md  protocol.md  sandbox.md  settings.md  telemetry.md
docs/tutorials/: build_an_agent.md  continuous_learning.md  index.md  multi_channel_chatbot.md
examples/: basic_agent.py  tool_agent.py
examples/skills/: assistant.skill.md
migrations/: env.py
migrations/versions/: 0001_interactions.py  0002_training_state.py
omniai/: __init__.py  app.py  prompts.py  protocol.py  settings.py  tenancy.py
omniai/engine/: __init__.py  backends.py  config.py  engine.py  lora.py  resilience.py  supervisor.py
omniai/evals/: __init__.py  gate.py
omniai/gateway/: __init__.py  adapters.py  observability.py  router.py  security.py
omniai/graph/: __init__.py  agent.py  graph.py  state.py  tools.py
omniai/guardrails/: __init__.py  middleware.py
omniai/memory/: __init__.py  buffer.py  curation.py  learning.py  models.py  rehearsal.py  skills.py
omniai/models/: __init__.py  anthropic.py  base.py  engine.py  openai.py  structured.py
omniai/rag/: __init__.py  store.py
omniai/sandbox/: __init__.py  executor.py
omniai/telemetry/: __init__.py
tests/: test_agent.py  test_app_factory.py  test_buffer_backends.py  test_compound.py  test_engine.py  test_engine_backends.py  test_example.py  test_gateway.py  test_gateway_adapters.py  test_graph.py  test_guardrails.py  test_integration.py  test_memory.py  test_migrations.py  test_models.py  test_observability.py  test_prompts.py  test_protocol.py  test_resilience.py  test_sandbox_evals.py  test_security.py  test_selfhost.py  test_settings.py  test_structured_output.py  test_telemetry.py  test_tools.py
