[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniai"
version = "0.1.0"
description = "OmniAI / NexusGraph: unified LLM orchestration and serving framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OmniAI Contributors" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
vllm = ["vllm>=0.5.0"]
sglang = ["sglang>=0.3.0"]
training = ["peft>=0.11", "trl>=0.9", "transformers>=4.40", "datasets>=2.19", "torch>=2.2"]
telemetry = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
include = ["omniai*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # function call in argument defaults (FastAPI Depends idiom)
    "SIM117",  # nested with statements (kept for clarity in tests)
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "E501", "I001"]  # < 50-line demo favors compactness
"omniai/guardrails/middleware.py" = ["E501"]  # regex patterns read better unwrapped
"tests/*" = ["B023"]  # loop-scoped closures in parametrized-by-hand loops

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["omniai"]

[tool.coverage.report]
fail_under = 85
show_missing = true
